; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_property_set_runtime_watchdog.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_property_set_runtime_watchdog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"t\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i8*, i32*, i8*, i32*)* @property_set_runtime_watchdog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @property_set_runtime_watchdog(i32* %0, i8* %1, i8* %2, i8* %3, i32* %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i32* %4, i32** %13, align 8
  store i8* %5, i8** %14, align 8
  store i32* %6, i32** %15, align 8
  %18 = load i8*, i8** %14, align 8
  %19 = bitcast i8* %18 to i32*
  store i32* %19, i32** %16, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @assert(i32* %20)
  %22 = load i32*, i32** %13, align 8
  %23 = call i32 @assert(i32* %22)
  %24 = call i32 @assert_cc(i32 1)
  %25 = load i32*, i32** %13, align 8
  %26 = load i32*, i32** %16, align 8
  %27 = call i32 @sd_bus_message_read(i32* %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %26)
  store i32 %27, i32* %17, align 4
  %28 = load i32, i32* %17, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %7
  %31 = load i32, i32* %17, align 4
  store i32 %31, i32* %8, align 4
  br label %35

32:                                               ; preds = %7
  %33 = load i32*, i32** %16, align 8
  %34 = call i32 @watchdog_set_timeout(i32* %33)
  store i32 %34, i32* %8, align 4
  br label %35

35:                                               ; preds = %32, %30
  %36 = load i32, i32* %8, align 4
  ret i32 %36
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @assert_cc(i32) #1

declare dso_local i32 @sd_bus_message_read(i32*, i8*, i32*) #1

declare dso_local i32 @watchdog_set_timeout(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
